--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
 <body>
   <header>
     Todos
+    <% if current_email %>
+      <p data-role='welcome'>Welcome, <%= current_email %>!</p>
+    <% end -%>
   </header>
 <%= yield %>
 
